--- a/requirements.txt
+++ b/requirements.txt
@@ -1,47 +1,4 @@
-asn1crypto==1.5.1
-azure-core==1.30.1
-azure-identity==1.16.0
-azure-keyvault==4.2.0
-azure-keyvault-certificates==4.8.0
-azure-keyvault-keys==4.9.0
-azure-keyvault-secrets==4.8.0
-blinker==1.8.2
-certifi==2024.6.2
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-colorama==0.4.6
-cryptography==42.0.8
-filelock==3.14.0
-Flask==3.0.3
-gunicorn==22.0.0
-idna==3.7
-importlib_metadata==7.1.0
-isodate==0.6.1
-itsdangerous==2.2.0
-Jinja2==3.1.4
-MarkupSafe==2.1.5
-msal==1.28.0
-msal-extensions==1.1.0
-numpy==1.26.4
-packaging==24.0
-pandas==2.2.2
-platformdirs==4.2.2
-portalocker==2.8.2
-pyarrow==16.1.0
-pycparser==2.22
-PyJWT==2.8.0
-pyOpenSSL==24.1.0
-python-dateutil==2.9.0.post0
-pytz==2024.1
-pywin32==306
-requests==2.32.3
-six==1.16.0
-snowflake-connector-python==3.10.1
-sortedcontainers==2.4.0
-tomlkit==0.12.5
-typing_extensions==4.12.1
-tzdata==2024.1
-urllib3==1.26.18
-Werkzeug==3.0.3
-zipp==3.19.2
+flask
+pytz
+snowflake-connector-python
+gunicorn
